sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: value unary_! is not a member of Int
  while (!c==0) {
         ^AlgBubbleSort1:11: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
        getValeur(i:Int)=getValeur((i+1):Int)
        ^AlgBubbleSort1:12: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
        getValeur((i+1):Int)=p
        ^